syntax = "proto3";

package item;

service ItemService {
rpc CreateItem(CreateItemRequest) returns (ItemResponse);
rpc GetItem(GetItemRequest) returns (ItemResponse);
rpc UpdateItem(UpdateItemRequest) returns (ItemResponse);
rpc DeleteItem(DeleteItemRequest) returns (Empty);
rpc ListItems(ListItemsRequest) returns (ItemListResponse);
}

message Empty {}

message CreateItemRequest {
string name = 1;
string description = 2;
string category = 3;
int32 total_quantity = 4;
string image_url = 5;
}

message UpdateItemRequest {
string id = 1;
string name = 2;
string description = 3;
string category = 4;
int32 total_quantity = 5;
int32 available_quantity = 6;
string image_url = 7;
}

message GetItemRequest {
string id = 1;
}

message DeleteItemRequest {
string id = 1;
}

message ListItemsRequest {
string category_filter = 1; // Opsional
}

message Item {
string id = 1;
string name = 2;
string description = 3;
string category = 4;
int32 total_quantity = 5;
int32 available_quantity = 6;
string image_url = 7;
string created_at = 8;
}

message ItemResponse {
Item item = 1;
}

message ItemListResponse {
repeated Item items = 1;
}